--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="skills-box">
-                    <p class="skills-title">Back-end Frameworks</p>
+                    <p class="skills-title">Web-app Frameworks</p>
                     <i class="devicon-rails-plain colored"></i>
                 </div>
 
